t1-course/tf-module-final-project/network/firewall/main.tf
resource "aws_security_group" "lb" {
  name        = "${var.project_name}-lb-sg-${var.environment}"
  description = "Security group for Load Balancer"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Public access
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.project_name}-lb-sg-${var.environment}"
    Environment = var.environment
  }
}

resource "aws_security_group" "instance" {
  name        = "${var.project_name}-instance-sg-${var.environment}"
  description = "Security group for instances in ASG"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.lb.id] # Allow traffic from LB
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.project_name}-instance-sg-${var.environment}"
    Environment = var.environment
  }
}
